# pointcloud_labeling_tools

./: CMakeLists.txt  package.xml
include/pointcloud_labeling_tools/: cuboid.hpp
launch/: accumulate_clouds.launch.xml  label_sparse_vegetation_map.launch.xml
src/: label_points_by_cuboids.cpp  pointcloud_accumulator.cpp
