<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pointcloud_labeling_tools</name>
  <version>0.0.0</version>
  <description>Tools for point cloud labeling</description>
  <maintainer email="vladimir.kubelka@oru.se">vladimir Kubelka</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <exec_depend>launch</exec_depend>

  <depend>nlohmann-json3-dev</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
